--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rimac",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://JheissyPalacios.github.io/rimac",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,7 +15,6 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://JheissyPalacios.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
