--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rimac",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://JheissyPalacios.github.io/rimac",
+  "homepage": "https://jheissypalacios.github.io/rimac/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
